# Typer3.0

./: AbstractSpaceObject.cpp  AbstractSpaceObject.h  Asteroid.cpp  Asteroid.h  Button.cpp  Button.h  CMakeLists.txt  Debris.cpp  Debris.h  Laser.cpp  Laser.h  Player.cpp  Player.h  PlayerInterface.cpp  PlayerInterface.h  Position.cpp  Position.h  Screen.cpp  Screen.h  Sentence.cpp  Sentence.h  Shape.cpp  Shape.h  graphics.h  graphics_starter.cpp  sentences.txt
